# StarsInfinity

./: CMakeLists.txt  README.md
src/: configurationConsts.hpp  events.cpp  events.hpp  main.cpp  star.cpp  star.hpp  utils.cpp  utils.hpp  version.hpp
